update report handle log step